Add CSS Styles and a button

--- a/style.css
+++ b/style.css
@@ -1,15 +1,36 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
-    width: 98vw;
-    height: 98vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
+    background-color: #9d96b8;
+    gap: 3vh;
+}
+
+.header {
+    text-align: center;
+    font-size: 10vh;
+    font-family: "Lucida Console", "Monaco", monospace;
+    font-weight: bolder;
+}
+
+button {
+    font-size: 3vh;
 }
 
 .container {
     flex: 1;
     display: grid;
     grid-template-columns: auto auto auto auto;
-    background-color: grey;
+    background-color: #7c5869;
     gap: 1px;
+    padding: 50px;
+    margin: 10vh;
 }
 
 .off {
