--- a/style.css
+++ b/style.css
@@ -19,10 +19,17 @@ body {
     color: #5e5e5e;
 }
 
+.buttons {
+
+    display: flex;
+    gap: 5em;
+}
+
 button {
     font-size: 3vh;
     background-color: white;
     padding: 0.4em;
+    width: 5em;
     color: #4392f1;
     border-radius: 10px;
     border: 3px solid #5e5e5e;
